# machine-learning-zoomcamp

./: .gitignore  pyproject.toml
02-regression/: notebook.ipynb
cohorts/2023/: README.md
cohorts/2023/01-intro/: homework_submission.ipynb  week1-homework-submission.ipynb
cohorts/2023/02-regression/: week2-homework-submission.ipynb
cohorts/2023/03-classification/: week3-homework-submission.ipynb
cohorts/2023/04-evaluation/: week4-homework-submission.ipynb
cohorts/2023/05-deployment/homework/: Dockerfile  Dockerfile.poetry  pyproject.toml  q3-homework-submission-Copy1.ipynb  q4-homework-submission-Copy1.ipynb  q6-homework-submission.ipynb
cohorts/2023/06-trees/: week6-homework-submission.ipynb
projects/midterm-project/: pyproject.toml
