[tool.poetry]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = "machine learning zoomcamp"
authors = ["waleed <waleed.ayoub@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
