[tool.poetry]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = "machine learning zoomcamp"
authors = ["waleed <waleed.ayoub@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.5"
numpy = "^1.25.2"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
sklearn = "^0.0.post9"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
