[tool.poetry]
name = "05-deployment-homework"
version = "0.1.0"
description = "ml zoomcamp week5 homework"
authors = ["waleed <waleed.ayoub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.1"
gunicorn = "^21.2.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
